# PhDCodes

plotter/source/: CMakeLists.txt
plotter/source/Plotter/: Efficiency.h  GraphicsOptions.h  HistoPlotter.h  ReadFiles.h  Statistics.h  Trigger.h
plotter/source/Root/: Efficiency.cxx  HistoPlotter.cxx  ReadFiles.cxx  Statistics.cxx  Trigger.cxx
plotter/source/app/: Plotter.cxx  add_AS_transformed_mc16a.py  add_AS_transformed_mc16d.py  add_AS_transformed_mc16e.py  basicPlotter.cxx  config_Plotter.cfg  config_Plotter_1mapReweight.cfg  config_Plotter_FULLSTAT_NNweight.cfg  config_Plotter_FULLSTAT_v1p4.cfg  config_Plotter_FULLSTAT_v1p4_2.cfg  config_Plotter_FULLSTAT_v1p5.cfg  config_Plotter_FULLSTAT_v1p5b.cfg  config_Plotter_FULLSTAT_v1p6.cfg  config_Plotter_FULLSTAT_v1p6_schemeA.cfg  config_Plotter_FULLSTAT_v1p6_schemeA_AS.cfg  config_Plotter_FULLSTAT_v1p6_schemeE.cfg  config_Plotter_FULLSTAT_v1p8.cfg  config_Plotter_FULLSTAT_v1p9.cfg  config_Plotter_FULLSTAT_weightmap.cfg  config_Plotter_Konie.cfg  config_Plotter_NNReweight.cfg  config_Plotter_example.cfg  config_Plotter_xGabriel.cfg  config_mergedSignals.cfg  config_mergedSignals_v1p4.cfg
plotter/source/app/SmallJets_info/: Info_SmallJet1_X_m_pT_Resolved_presel_.txt  Info_SmallJet1_X_m_pT_Resolved_presel_final.txt  Info_SmallJet2_X_m_pT_Resolved_presel_.txt  Info_SmallJet2_X_m_pT_Resolved_presel_final.txt  file_SmallJet1_X_m_pT.root  file_SmallJet2_X_m_pT.root
plotter/source/util/: #Debug.h#  Debug.h  colormod.h  fit_D2_cuts.C  fit_Gauss.C  fit_bkg.C  mergeHistos.C  results_fit.txt  results_fit.txt_old  script_AddRewFactorsToBkgTree.sh  script_CalculateReweight1D.sh  script_CalculateReweight2D.sh  script_CalculateReweight2D.sh_3maps  script_CalculateReweight2D_1map.sh
plotter/source/util/Reweight/: Reweight1D.C  Reweight1D.h_nominal  Reweight2D.C  Reweight2D.C_3maps  Reweight2D.h  Reweight2D.h_3maps  Reweight2D_1map.C  (+1 more)
(+16 files in other folders)
